--- a/models/reporting/blended.yml
+++ b/models/reporting/blended.yml
@@ -1,1 +1,15 @@
 version: 2
+
+sources:
+      
+- name: reporting
+  schema: reporting
+  tables:
+    - name: facebook_ad_performance
+      identifier: tradecoffee_facebook_ad_performance
+
+    - name: googleads_campaign_performance
+      identifier: tradecoffee_googleads_campaign_performance
+
+    - name: bingads_campaign_performance
+      identifier: tradecoffee_bingads_campaign_performance
