--- a/models/reporting/blended.yml
+++ b/models/reporting/blended.yml
@@ -13,3 +13,9 @@ sources:
     
     - name: bingads_campaign_performance
       identifier: tradecoffee_bingads_campaign_performance
+
+- name: facebook_raw
+  schema: facebook_raw
+  tables:
+    - name: ads_insights_actions
+      identifier: ads_insights_actions
